hphp/hack/test/typecheck/inout/bad_inout_use_lvalue2.php
<?hh

const SOME_CONST = 'FOO';

function f(inout string $i): void {}

function test(): void {
  f(inout SOME_CONST);
}
